ansible/roles_ocp_workloads/ocp4_workload_3scale_workshop/files/location-service-template.yml
---
kind: Service
apiVersion: v1
metadata:
  name: location-service
  namespace: international
  labels:
    app: location-service
    component: location-service
    group: quickstarts
    provider: s2i
    template: s2i-fuse71-spring-boot-camel
    version: 1.0.0.fuse-000153-redhat-2
spec:
  ports:
    - name: tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  sessionAffinity: None
  selector:
    component: location-service
    deploymentconfig: location-service
    provider: s2i
    version: 1.0.0.fuse-000153-redhat-2
---
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: location-service
  namespace: international
  labels:
    app: location-service
    component: location-service
    group: quickstarts
    provider: s2i
    template: s2i-fuse71-spring-boot-camel
    version: 1.0.0.fuse-000153-redhat-2
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    app: location-service
    component: location-service
    deploymentconfig: location-service
    group: quickstarts
    provider: s2i
    version: 1.0.0.fuse-000153-redhat-2
  template:
    metadata:
      labels:
        app: location-service
        component: location-service
        deploymentconfig: location-service
        group: quickstarts
        provider: s2i
        version: 1.0.0.fuse-000153-redhat-2
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
    spec:
      containers:
        - name: location-service
          image: quay.io/redhat_na_ssa/workshop-3scale-location:1.0.0
          ports:
            - name: jolokia
              containerPort: 8778
              protocol: TCP
          resources:
            limits:
              cpu: '1'
              memory: 2G
            requests:
              cpu: 200m
              memory: 2G
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
