ansible/roles_ocp_workloads/ocp4_workload_3scale_workshop/files/solution-explorer-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: tutorial-web-app
  labels:
    app: tutorial-web-app
spec:
  ports:
    - name: http
      protocol: TCP
      port: 5001
      targetPort: 5001
  internalTrafficPolicy: Cluster
  sessionAffinity: None
  selector:
    app: tutorial-web-app
