ansible/roles_ocp_workloads/ocp4_workload_3scale_workshop/files/solution-explorer-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tutorial-web-app
  labels:
    app: tutorial-web-app
spec:
  to:
    kind: Service
    name: tutorial-web-app
    weight: 100
  tls:
    termination: edge
  wildcardPolicy: None
